1.7.4.0/_sources/Reference/NodeReference/GafferScene/DeletePoints.md.txt
DeletePoints
============

Deletes points from a points primitive using a primitive variable or id list to choose the points.

user
----

Container for user-defined plugs. Nodes
should never make their own plugs here,
so users are free to do as they wish.

out
---

The processed output scene.

enabled
-------

The on/off state of the node. When it is off, the node outputs the input scene unchanged.

in
--

The input scene

filter
------

The filter used to control which parts of the scene are
processed. A Filter node should be connected here.

adjustBounds
------------

Adjusts bounding boxes to account for the changes made to the object.

> Caution : Adjusting boundings boxes has a performance penalty.
> If you do not need accurate bounds or you know that the bounds
> will only change slightly, you may prefer to turn this off.

selectionMode
-------------

Chooses how to select points to delete.

- VertexPrimitiveVariable : Deletes points with a non-zero value in the `points` primitive variable.
- IdListPrimitiveVariable : Deletes points with Ids in the `idListVariable` primitive variable.
- IdList : Deletes points with Ids in the `idList`.

points
------

Vertex interpolated int, float or bool primitive variable to choose which points to delete. Note a non-zero value indicates the point will be deleted. Only used when `selectionMode` is "VertexPrimitiveVariable".

idListVariable
--------------

The name of a constant primitive variable holding a list of ids to delete. Must be type IntVectorData or Int64VectorData. Only used when `selectionMode` is "IdListPrimitiveVariable".

idList
------

A list of ids to delete. Only used when `selectionMode` is "IdList".

id
--

When using an id list to delete points, this primitive variable defines the id used for each point.
If this primitive variable is not found, then the index of each point is its id.

invert
------

Invert the condition used to delete points. If the primvar is zero then the point will be deleted.

ignoreMissingVariable
---------------------

Causes the node to do nothing if the primitive variable doesn't exist on the points, instead of erroring.